hphp/hack/test/enum_class/typing/typing.multiple.extends.vshape.bad.php.exp
File "typing.multiple.extends.vshape.bad.php", line 18, characters 12-13:
Class `V0` does not correctly implement all required members  (Typing[4340])
  File "typing.multiple.extends.vshape.bad.php", line 18, characters 31-32:
  Some members are incompatible with those declared in type `E0`
  File "typing.multiple.extends.vshape.bad.php", line 12, characters 3-3:
  Expected `F0`
  File "typing.multiple.extends.vshape.bad.php", line 8, characters 3-3:
  But got `E0`
  File "typing.multiple.extends.vshape.bad.php", line 8, characters 3-3:
  This type argument to `HH\Elt` only allows supertypes (it is contravariant)
File "typing.multiple.extends.vshape.bad.php", line 18, characters 35-36:
V0 cannot re-inherit constant B from \F0 (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 18, characters 12-13:
  because it already inherited it via E0
File "typing.multiple.extends.vshape.bad.php", line 29, characters 12-13:
Class `V1` does not correctly implement all required members  (Typing[4340])
  File "typing.multiple.extends.vshape.bad.php", line 29, characters 31-32:
  Some members are incompatible with those declared in type `E0`
  File "typing.multiple.extends.vshape.bad.php", line 23, characters 3-3:
  Expected `F1`
  File "typing.multiple.extends.vshape.bad.php", line 8, characters 3-3:
  But got `E0`
  File "typing.multiple.extends.vshape.bad.php", line 8, characters 3-3:
  This type argument to `HH\Elt` only allows supertypes (it is contravariant)
File "typing.multiple.extends.vshape.bad.php", line 29, characters 35-36:
V1 cannot re-inherit constant B from \F1 (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 29, characters 12-13:
  because it already inherited it via E0
File "typing.multiple.extends.vshape.bad.php", line 40, characters 12-13:
Class `V2` does not correctly implement all required members  (Typing[4340])
  File "typing.multiple.extends.vshape.bad.php", line 40, characters 31-32:
  Some members are incompatible with those declared in type `E0`
  File "typing.multiple.extends.vshape.bad.php", line 34, characters 3-3:
  Expected `F2`
  File "typing.multiple.extends.vshape.bad.php", line 8, characters 3-3:
  But got `E0`
  File "typing.multiple.extends.vshape.bad.php", line 8, characters 3-3:
  This type argument to `HH\Elt` only allows supertypes (it is contravariant)
File "typing.multiple.extends.vshape.bad.php", line 40, characters 35-36:
V2 cannot re-inherit constant B from \F2 (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 40, characters 12-13:
  because it already inherited it via E0
File "typing.multiple.extends.vshape.bad.php", line 51, characters 12-13:
Class `V3` does not correctly implement all required members  (Typing[4340])
  File "typing.multiple.extends.vshape.bad.php", line 51, characters 35-36:
  Some members are incompatible with those declared in type `F3`
  File "typing.multiple.extends.vshape.bad.php", line 52, characters 3-3:
  Expected `V3`
  File "typing.multiple.extends.vshape.bad.php", line 45, characters 3-3:
  But got `F3`
  File "typing.multiple.extends.vshape.bad.php", line 45, characters 3-3:
  This type argument to `HH\Elt` only allows supertypes (it is contravariant)
File "typing.multiple.extends.vshape.bad.php", line 52, characters 3-3:
V3 cannot re-declare constant C (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 51, characters 12-13:
  because it already inherited it via F3
File "typing.multiple.extends.vshape.bad.php", line 58, characters 12-13:
Class `V4` does not correctly implement all required members  (Typing[4340])
  File "typing.multiple.extends.vshape.bad.php", line 58, characters 35-36:
  Some members are incompatible with those declared in type `F3`
  File "typing.multiple.extends.vshape.bad.php", line 59, characters 3-3:
  Expected `V4`
  File "typing.multiple.extends.vshape.bad.php", line 45, characters 3-3:
  But got `F3`
  File "typing.multiple.extends.vshape.bad.php", line 45, characters 3-3:
  This type argument to `HH\Elt` only allows supertypes (it is contravariant)
File "typing.multiple.extends.vshape.bad.php", line 59, characters 3-3:
V4 cannot re-declare constant C (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 58, characters 12-13:
  because it already inherited it via F3
File "typing.multiple.extends.vshape.bad.php", line 64, characters 12-13:
Class `V5` does not correctly implement all required members  (Typing[4340])
  File "typing.multiple.extends.vshape.bad.php", line 64, characters 35-36:
  Some members are incompatible with those declared in type `F3`
  File "typing.multiple.extends.vshape.bad.php", line 65, characters 3-3:
  Expected `V5`
  File "typing.multiple.extends.vshape.bad.php", line 45, characters 3-3:
  But got `F3`
  File "typing.multiple.extends.vshape.bad.php", line 45, characters 3-3:
  This type argument to `HH\Elt` only allows supertypes (it is contravariant)
File "typing.multiple.extends.vshape.bad.php", line 65, characters 3-3:
V5 cannot re-declare constant C (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 64, characters 12-13:
  because it already inherited it via F3
